--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_area :content %>
   </div>
   <div class="field">
-    <%= f.label :public %><br />
-    <%= f.check_box :public %>
+    <%= f.label :is_public %><br />
+    <%= f.check_box :is_public %>
   </div>
   <div class="actions">
     <%= f.submit %>
